# ollama-ctl

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: mcp.json
homebrew/: ollama-ctl.rb
src/ollama_ctl/: __init__.py  cli.py  client.py  config.py  mcp.py  models.py  utils.py
tests/: __init__.py
